data/root/examples/expression.this
{"content":"def f(x: i32) using (a : `x`): Unit = true\n\ndef g(x: i32, p: `x`): Unit = {\n\timplicit for `x` = p\n\tval z = the `x`\n\tf(x) // using (__%1__)\n}\n\ndef i(x: i32, p: `x+1`): Unit = {\n\tval q = p\n}\n\ndef id[T](x: T): `x` = x\n\ndef h(a: i32): Unit = {\n\tg(a, a)\n\tg(a, id(a))\n\ti(a, a) // error\n\ti(a, a+1)\n\tg(a + 1, a+1)\n\n\ti(a+1, a+2) // error: cannot assign `a+2` to `(a+1)+1` TODO: make this work\n\ti(a+1, (a+1)+1)\n}\n","test_result":{"errors":[],"annotations":[{"position":{"row":0,"column":42},"segments":[{"value":": "},{"value":"`true`","error":"Not assignable to Unit"}]},{"position":{"row":17,"column":7},"segments":[{"value":": "},{"value":"`a` (yielding) i32","error":"Not assignable to `a.+(1)`"}]},{"position":{"row":21,"column":11},"segments":[{"value":": "},{"value":"`a.+(2)` (yielding) i32","error":"Not assignable to `a.+(1).+(1)`"}]},{"position":{"row":3,"column":9},"segments":[{"value":"__value__%1"}]},{"position":{"row":4,"column":6},"segments":[{"value":": "},{"value":"`"},{"value":"*ErrorValue*"},{"value":"`"},{"value":" (yielding) "},{"value":"`"},{"value":"x"},{"value":"`"}]},{"position":{"row":4,"column":16},"segments":[{"value":"__value__%1"}]},{"position":{"row":5,"column":3},"segments":[{"value":"x"},{"value":"="}]},{"position":{"row":5,"column":5},"segments":[{"value":" using ("},{"value":"__value__%1"},{"value":")"}]},{"position":{"row":9,"column":6},"segments":[{"value":": "},{"value":"`"},{"value":"p"},{"value":"`"},{"value":" (yielding) "},{"value":"`"},{"value":"x"},{"value":".+"},{"value":"("},{"value":"1"},{"value":")"},{"value":"`"}]},{"position":{"row":15,"column":3},"segments":[{"value":"x"},{"value":"="}]},{"position":{"row":15,"column":5},"segments":[{"value":"p"},{"value":"="}]},{"position":{"row":16,"column":3},"segments":[{"value":"x"},{"value":"="}]},{"position":{"row":16,"column":5},"segments":[{"value":"p"},{"value":"="}]},{"position":{"row":17,"column":3},"segments":[{"value":"x"},{"value":"="}]},{"position":{"row":17,"column":5},"segments":[{"value":"p"},{"value":"="}]},{"position":{"row":18,"column":3},"segments":[{"value":"x"},{"value":"="}]},{"position":{"row":18,"column":5},"segments":[{"value":"p"},{"value":"="}]},{"position":{"row":19,"column":3},"segments":[{"value":"x"},{"value":"="}]},{"position":{"row":19,"column":9},"segments":[{"value":"p"},{"value":"="}]},{"position":{"row":21,"column":3},"segments":[{"value":"x"},{"value":"="}]},{"position":{"row":21,"column":7},"segments":[{"value":"p"},{"value":"="}]},{"position":{"row":22,"column":3},"segments":[{"value":"x"},{"value":"="}]},{"position":{"row":22,"column":7},"segments":[{"value":"p"},{"value":"="}]}]}}